# mini2gguf

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
assets/models/: README.md
assets/models/crnn/: dict_number.txt
converter/: README.md  crnn2gguf.py  darknet2onnx.py  gguf-reader.py  onnx2gguf.py  yolo2gguf.py
converter/internal/: __init__.py  pt_exporters.py
converter/internal/ir/: __init__.py
converter/python/: darknet2onnx.py  gguf-reader.py  onnx2gguf.py  pt_exporters.py  yolo2gguf.py
core/ir/: model.py
examples/: CMakeLists.txt  infer_performance_test.cpp  yolo_demo.cpp
examples/cpp/: CMakeLists.txt  infer_demo.cpp  yolo_dynamic_demo.cpp
ggml/examples/yolo/: yolov3-tiny.cpp
ggml/feature/: gathelement.txt  mod.txt  reducemax.txt
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: binary-ops.cpp  binary-ops.h  ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-cuda/: binbcast.cu  binbcast.cuh  gather-elements.cu  gather-elements.cuh  ggml-cuda.cu  gru.cu  gru.cuh  im2col.cu  reduce-max.cu  reduce-max.cuh  reduce-mean.cu  reduce-mean.cuh
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: gather_elements.comp  gru.comp  im2col.comp  im2col_3d.comp  mod.comp  mod_int.comp  reduce_max_rows.comp  reduce_mean_rows.comp  repeat.comp  vulkan-shaders-gen.cpp
runtime/: CMakeLists.txt
runtime/include/mini2gguf/: crnn_utils.hpp  model_runtime.hpp  yolo_utils.hpp
runtime/src/: crnn_utils.cpp  model_runtime.cpp  yolo_utils.cpp
tests/unit/: test_onnx_to_ir.py
